[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.23",
    "scipy>=1.7",
]

[project]
name = "cmad"
version = "1.0.0"
description = "Constitutive Models via Automatic Differentiation"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "Tom Seidl", email = "dtseidl@sandia.gov"}
]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "numpy>=1.23",
    "matplotlib",
    "scipy>=1.7",
    "sympy",
    "scikit-learn",
    "coverage>=6.4",
    "pytest-cov",
    "pytest>=4.6",
    "jax[cpu]>=0.4.20",
]

[project.optional-dependencies]
docs = ["numpydoc", "sphinx", "sphinx_automodapi", "sphinx_rtd_theme",
        "sphinx-gallery", "jupyter"]

[project.scripts]
cmad = "cmad.cli.main:main"
