[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmad"
version = "1.0.0"
description = "Constitutive Models via Automatic Differentiation"
requires-python = ">=3.10,<3.14"
readme = "README.md"
authors = [
    {name = "Tom Seidl", email = "dtseidl@sandia.gov"}
]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "numpy",
    "scipy",
    "jax",
    "matplotlib",
    "sympy",
    "jsonschema",
    "pyyaml",
    "netCDF4",
    "pyamg",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]

[project.urls]
Homepage = "https://github.com/sandialabs/cmad"

[project.scripts]
cmad = "cmad.cli.main:main"

[tool.setuptools.packages.find]
include = ["cmad*"]
